test/error/ArrayStgNegativeLength.ci
public class Test
{
	int[-5] Array; //ERROR: Expected non-negative integer
}
